# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .env.example  claims.py  events.py  full_demo.py  hello_world.py  memories.py  memory_policy.py  multi_provider.py  profile.py  prompts.py  records.py  state.py  streaming.py
mnexium/: __init__.py  chat.py  client.py  errors.py  events.py  providers.py  streaming.py  subject.py  types.py
tests/: test_client.py
