[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnexium"
version = "0.1.0"
description = "Official Mnexium SDK for Python - Add memory to your AI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mnexium, Inc.", email = "support@mnexium.com" }
]
keywords = [
    "mnexium",
    "ai",
    "memory",
    "llm",
    "openai",
    "anthropic",
    "gemini",
    "agent",
    "chatbot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://mnexium.com"
Documentation = "https://mnexium.com/docs"
Repository = "https://github.com/mnexium/sdk-python"
Issues = "https://github.com/mnexium/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["mnexium"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
